# kocor-agent

./: .coverage  .env.example  .gitignore  CLAUDE.md  KOCOR.md  README.md  guangzhou_weather_20260713.txt  guangzhou_weather_20260715.txt  kocor.mcp.json  kocor.skills.json  pyproject.toml  skills-lock.json  weather_shenzhen.txt
docs/: TECHNICAL_DESIGN.md  context_design.md  harness_design.md  streaming_design.md
src/kocor/: __init__.py  __main__.py  _secret.py  _stream_session.py  agent.py  anthropic_client.py  cli.py  cli_builder.py  config.py  cron_worker.py  llm_client.py  logger.py  loop.py  mcp_client.py  mcp_permission.py  message.py  openai_client.py  tool_registry.py  tools.py
tests/: conftest.py  test_agent.py  test_anthropic_client.py  test_config.py  test_llm_client.py  test_main.py  test_mcp_client.py  test_message.py  test_openai_client.py  test_tools.py
tests/_cli/: test_formatter.py  test_formatter_edge_cases.py  test_output_welcome.py
tests/agent/: test_agent.py  test_agent_builder.py  test_agent_context.py  test_agent_edge_cases.py  test_agent_session.py  test_agent_todo.py
tests/cli/: test_formatter.py  test_formatter_edge_cases.py  test_main.py  test_welcome.py
tests/config/: test_config.py  test_hot_reload.py  test_path_resolve.py  test_secret_str.py  test_subagent_config.py
tests/context/: conftest.py  test_builder.py  test_context_manager.py  test_context_models.py  test_context_types.py  test_env_info.py  test_memory.py  test_project_instructions.py  test_runtime_context.py  test_session.py  test_sliding_window.py  test_strategies.py  (+4 more)
(+250 files in other folders)
